[package]
name = "crawlstash"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]

[dependencies]
diesel = { version = "0.16.0", features = ["sqlite"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
dotenv = "0.10.1"
reqwest = "0.8.0"

[profile.release]
lto = true
