[package]
name = "crawlstash"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]

[dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["sqlite"] }
diesel_codegen = { git = "https://github.com/diesel-rs/diesel", features = ["sqlite"] }
dotenv = "0.10.1"
reqwest = "0.8.0"
serde = "1.0.17"
serde_derive = "1.0.17"

[profile.release]
lto = true
